# agentic-flow

./: package.json
.github/: CODEOWNERS
agentic-flow/docs/router/: README.md
analysis/: pyproject.toml
bench/: package.json
benchmarks/: package.json
src/controller/test/e2e/: package.json
test/benchmark/: package.json
test/e2b/: package.json
test/economics/: package.json
test/patterns/: package.json
tests/e2b-specialized-agents/: package.json
