[project]
name = "maternal-life-history-trade-off-analysis"
description = "AI-powered analysis of maternal health and reproductive trade-offs using AgentDB and RL algorithms"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.16.0",
    "cvxpy>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pymc>=5.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]
